--- a/sass/style.scss
+++ b/sass/style.scss
@@ -74,7 +74,9 @@ a, nav {
 	        padding: 10px;
 }
 
-
+nav .fa-bars {
+	display: none;
+}
 
 ul.menu{
 
@@ -113,6 +115,7 @@ ul.menu{
 .content{
 	display: flex;
 
+
 }
 // Main Page 
 
@@ -120,18 +123,13 @@ ul.menu{
 	padding-top: 50px;
 }
 
-.main {
-	padding: 50px;
-	margin: 0 auto;
-	text-align: center;
-}
 .aboutMain {
 	padding: 70px;
 	border: 7px solid black;
 }
 .readmore {
 	margin: 0 auto;
-	width: 155px;
+	width: 160px;
 	border:3px solid black;
 	font-family: $font-header;
 	padding: 12px;
@@ -161,8 +159,9 @@ ul.menu{
 .main{
 	background: #fff;
 	color: #000;
-	width: 80%;
-	padding: 0 50px;
+	width: 90%;
+	padding: 0 40px;
+	margin: 0 auto;
 }
 .contentGallery {
 	margin: 0 auto;
@@ -191,12 +190,13 @@ ul.menu{
 			padding: 0;
 			border: 5px solid black;
 			display: block;
+			width: 100%;
+			max-height: 275px;
 
 		}
 		a {
 			margin: 0 auto;
 			padding: 5px 0;
-			// width: 100%;
 			@include fontSize(12);
 			font-family: $font-header;
 			color:black;
@@ -208,40 +208,62 @@ ul.menu{
 	}
 }
 
-// .sidebar{
-// 	background: #E4C3C9;
-// 	width: 20%;
-// 	padding: 20px;
-// 	margin: 0;
-// 	list-style: none;
-// }
+// about section
+.posts {
+	padding: 50px;
+    width: 100%;
+    margin: 50px;
+    border: 5px solid;
+     p{
+     	padding:50px;
+     	width: 100%;
+     	text-align: left;
+     }
+}
+// works
+.contentWorks {
+	display: block;
+	article {
+		width: 100%;
+		margin: 0 auto;
+		border: 5px solid black;
+		// padding: 50px;
+		margin: 50px;
+		h2 {
+			width: 70%;
+			text-align: center;
+			padding: 10px;
+			a {
+				color: black;
+				&:hover {
+					text-decoration: underline;
+				}
+			}
+		}
+		img {
+			padding: 0 50px;
+			width: 100%;
+		}
+	}
+}
+// single post
+.entry-content {
+	p {
+		text-align: left;
+		padding: 10px;
+		border-bottom: 5px dashed black;
+	}
+}
+.titleSingle {
+	h2 {
+		text-align: left;
+		a {
+			color:black;
+		}
+	}
+}
 
-// .sidebar h3{
-// 	font-size: 25px;
-// 	text-transform: uppercase;
-// }
 
-// .sidebar ul{
-// 	list-style: none;
-// 	padding: 0;
-// }
-
-// .sidebar a{
-// 	color: white;
-// }
-
-
-// input{
-// 	margin: 5px 0;
-// 	padding: 5px;
-// }
-// input[type=submit]{
-// 	background: #474662;
-// 	color: white;
-// 	text-transform: uppercase;
-// 	border: none;
-
-// }
 
 footer{
 	color:black;
@@ -268,54 +290,84 @@ footer{
 	
 
 }
-.blog{
-	background: white;
-	color: black;
+
+.open {
+		display: block;
+		}	
+
+//media queries
+@media(max-width: 660px){
+	header {
+		.hero {
+			display: cover;
+		}
+		
+	}
+	 .main {
+	 	width: 100%;
+	 	display: block;
+	 }
+	.aboutMain {
+		padding: 20px;
+		border: none;
+	}
+	.gallery {
+		ul {
+			display: block;
+			li{
+			width: 100%;
+			display: block;
+		}
+		}
+	}
+	.logo {
+		display: none;
+	}
+	 
 }
 
-.blog article{
-	display: flex;
-	padding: 50px 0;
-	align-items: center;
+
+@media(max-width: 490px){
+	display: block;
+	nav {
+		padding: 0;
+		display: block;
+		.fa-bars {
+		display: block;
+		padding: 10px 15px;
+		color: white;
+		cursor: pointer;
+		}
+	}
+
+	.menu{
+		// display: none;
+		text-align: left;
+		overflow: hidden;
+		li {
+		display: block;
+		width: 100%;
+		padding: 0;
+		a{
+			width: 100%;
+			display: block;
+		}
+		// flex:none;
+
+		}
+		
+		}
+		a {
+		color: #73DD72;
+		padding-left: 15px;
+		}
+
+	
 }
 
-.author img{
-	border-radius: 50%;
-	border: 10px solid #E4C3C9;
-}
+// menu-primary-navigation
+ 
+		
+// 		
 
-.author a{
-	text-align: center;
-	font-weight:bold;
-}
-
-
-.blogpost{
-	padding-left: 10px;
-}
-
-.blogpost h2{
-	border-bottom: 2px solid black;
-	text-transform: uppercase;
-	font-size: 40px;
-}
-
-.blogpost h3{
-	font-size: 30px;
-}
-
-
-article:nth-child(odd) .author{
-	-webkit-box-ordinal-group: 3;
-	-webkit-order: 2;
-	    -ms-flex-order: 2;
-	        order: 2;
-}
-
-article:nth-child(odd) .author img{
-	border: 10px solid white;
-}
-
-article:nth-child(odd) .blogpost{
-	padding-right: 10px;
-}
+// 	}
