--- a/sass/style.scss
+++ b/sass/style.scss
@@ -231,7 +231,7 @@ ul.menu{
 
 // about section
 .posts {
-	margin-bottom: 30px;
+	margin: 30px 5px;
     width: 100%;
     border-top: 5px dashed;
    	border-bottom: 5px dashed;
@@ -249,7 +249,6 @@ ul.menu{
 .contentWorks {
 	display: block;
 	article {
-		width: 100%;
 		margin: 50px auto;
 		border-top: 5px dashed black;
 		padding: 20px;
