--- a/sass/style.scss
+++ b/sass/style.scss
@@ -212,7 +212,6 @@ ul.menu{
 			// border: 5px solid black;
 			display: block;
 			width: 100%;
-			max-height: 275px;
 
 		}
 		a {
@@ -268,6 +267,7 @@ ul.menu{
 		img {
 			padding: 0 10px;
 			width: 100%;
+			height: 100%;
 		}
 	}
 }
@@ -321,6 +321,57 @@ footer{
 .open {
 		display: block;
 		}	
+//contact 
+div.wpcf7{
+	margin: 0 auto;
+}
+.wpcf7-form{
+	// margin-left: 70px;
+	p {
+		display: flex;
+		justify-content: space-between;
+		color: grey;
+		border: none;
+		font-family: $font-header;
+		input {
+			border: none;
+			    background: #E0E0E3;
+			    color: #585858;
+			    padding: 10px 15px;
+			    font-family: $font-header;
+			    font-weight: 700;
+			    width: 100%;
+			    
+		}
+		.wpcf7-submit {
+			position: relative;
+			left: 414px;
+			width: 25%;
+		}
+
+		
+	}
+	span {
+		margin-left: 40px;
+		input{
+			border: none;
+			border-bottom: 2px dashed black;
+			background: #E0E0E3;
+			
+
+		}
+		textarea {
+			resize: none;
+			border: none;
+			// border-top: 2px dashed black;
+			border-bottom: 2px dashed black;
+			background: #E0E0E3;
+
+		}
+
+
+	}
+}
 
 //media queries
 @media(max-width: 900px){
@@ -367,6 +418,26 @@ footer{
 	}
 	.logo {
 		display: none;
+	}
+	.posts {
+		display: block;
+		h2 {
+			text-align: center;
+		}
+	}
+	.wpcf7-form {
+		span {
+			margin: 0;
+		}
+		p {
+			display: block;
+			.wpcf7-submit {
+			left: 0;
+			
+		}
+
+		}
+		
 	}
 
 	
