fixed a bug in mobile verion

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -366,6 +366,7 @@ div.wpcf7{
 			// border-top: 2px dashed black;
 			border-bottom: 2px dashed black;
 			background: #E0E0E3;
+			width: 100%;
 
 		}
 
